feat: Introduce new architecture and API documentation, integrate Serena tooling, and update numerous CI/CD workflows and project guidelines.

--- a/.github/ISSUE_TEMPLATE/1.bug.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug.yml
@@ -1,6 +1,6 @@
 name: Bug report 🐛
 description: Create a bug report for AutoGPT.
-labels: ['status: needs triage']
+labels: ["status: needs triage"]
 body:
   - type: markdown
     attributes:
@@ -33,14 +33,14 @@ body:
       value: |
         Please confirm that the issue you have is described well and precise in the title above ⬆️.
         A good rule of thumb: What would you type if you were searching for the issue?
-        
+
         For example:
         BAD - my AutoGPT keeps looping
         GOOD - After performing execute_python_file, AutoGPT goes into a loop where it keeps trying to execute the file.
-        
+
         ⚠️ SUPER-busy repo, please help the volunteer maintainers.
         The less time we spend here, the more time we can spend building AutoGPT.
-        
+
         Please help us help you by following these steps:
         - Search for existing issues, adding a comment when you have the same or similar issue is tidier than "new issue" and 
           newer issues will not be reviewed earlier, this is dependent on the current priorities set by our wonderful team
@@ -147,7 +147,7 @@ body:
     attributes:
       value: |
         ⚠️The following is OPTIONAL, please keep in mind that the log files may contain personal information such as credentials.⚠️
-        
+
         "The log files are located in the folder 'logs' inside the main AutoGPT folder."
 
   - type: textarea
