--- a/.github/ISSUE_TEMPLATE/2.feature.yml
+++ b/.github/ISSUE_TEMPLATE/2.feature.yml
@@ -1,6 +1,6 @@
 name: Feature request 🚀
 description: Suggest a new idea for AutoGPT!
-labels: ['status: needs triage']
+labels: ["status: needs triage"]
 body:
   - type: markdown
     attributes:
