--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
-* @Significant-Gravitas/maintainers
-.github/workflows/ @Significant-Gravitas/devops
-classic/forge/ @Significant-Gravitas/forge-maintainers
-classic/benchmark/ @Significant-Gravitas/benchmark-maintainers
-classic/frontend/ @Significant-Gravitas/frontend-maintainers
-autogpt_platform/infra @Significant-Gravitas/devops
-.github/CODEOWNERS @Significant-Gravitas/admins
+* @jrmatherly
+.github/workflows/ @jrmatherly
+classic/forge/ @jrmatherly
+classic/benchmark/ @jrmatherly
+classic/frontend/ @jrmatherly
+autogpt_platform/infra @jrmatherly
+.github/CODEOWNERS @jrmatherly
