--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,33 +1,33 @@
 Classic AutoGPT Agent:
-- changed-files:
-  - any-glob-to-any-file: classic/original_autogpt/**
+  - changed-files:
+      - any-glob-to-any-file: classic/original_autogpt/**
 
 Classic Benchmark:
-- changed-files:
-  - any-glob-to-any-file: classic/benchmark/**
+  - changed-files:
+      - any-glob-to-any-file: classic/benchmark/**
 
 Classic Frontend:
-- changed-files:
-  - any-glob-to-any-file: classic/frontend/**
+  - changed-files:
+      - any-glob-to-any-file: classic/frontend/**
 
 Forge:
-- changed-files:
-  - any-glob-to-any-file: classic/forge/**
+  - changed-files:
+      - any-glob-to-any-file: classic/forge/**
 
 documentation:
-- changed-files:
-  - any-glob-to-any-file: docs/**
+  - changed-files:
+      - any-glob-to-any-file: docs/**
 
 platform/frontend:
-- changed-files:
-  - any-glob-to-any-file: autogpt_platform/frontend/**
+  - changed-files:
+      - any-glob-to-any-file: autogpt_platform/frontend/**
 
 platform/backend:
-- changed-files:
-  - all-globs-to-any-file:
-    - autogpt_platform/backend/**
-    - '!autogpt_platform/backend/backend/blocks/**'
+  - changed-files:
+      - all-globs-to-any-file:
+          - autogpt_platform/backend/**
+          - "!autogpt_platform/backend/backend/blocks/**"
 
 platform/blocks:
-- changed-files:
-  - any-glob-to-any-file: autogpt_platform/backend/backend/blocks/**
+  - changed-files:
+      - any-glob-to-any-file: autogpt_platform/backend/backend/blocks/**
