--- a/.github/workflows/classic-benchmark-ci.yml
+++ b/.github/workflows/classic-benchmark-ci.yml
@@ -2,16 +2,16 @@ name: Classic - AGBenchmark CI
 
 on:
   push:
-    branches: [ master, dev, ci-test* ]
+    branches: [master, dev, ci-test*]
     paths:
-      - 'classic/benchmark/**'
-      - '!classic/benchmark/reports/**'
+      - "classic/benchmark/**"
+      - "!classic/benchmark/reports/**"
       - .github/workflows/classic-benchmark-ci.yml
   pull_request:
-    branches: [ master, dev, release-* ]
+    branches: [master, dev, release-*]
     paths:
-      - 'classic/benchmark/**'
-      - '!classic/benchmark/reports/**'
+      - "classic/benchmark/**"
+      - "!classic/benchmark/reports/**"
       - .github/workflows/classic-benchmark-ci.yml
 
 concurrency:
@@ -23,7 +23,7 @@ defaults:
     shell: bash
 
 env:
-  min-python-version: '3.10'
+  min-python-version: "3.10"
 
 jobs:
   test:
@@ -94,7 +94,7 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
       - name: Upload test results to Codecov
-        if: ${{ !cancelled() }}  # Run even if tests fail
+        if: ${{ !cancelled() }} # Run even if tests fail
         uses: codecov/test-results-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
