feat: Update repository to Matherly.net fork, deprecate classic components, and streamline documentation by removing original project details and contact information.

--- a/PROJECT_INDEX.json
+++ b/PROJECT_INDEX.json
@@ -8,7 +8,7 @@
   "description": "A platform for building, deploying, and managing AI agents that automate complex workflows",
   "license": {
     "platform": "Polyform Shield License",
-    "classic": "MIT License"
+    "classic": "MIT License **DEPRECATED**"
   },
   "structure": {
     "autogpt_platform": {
@@ -35,7 +35,7 @@
     },
     "classic": {
       "path": "classic/",
-      "description": "Legacy components",
+      "description": "Legacy components **DEPRECATED**",
       "components": {
         "original_autogpt": "Original standalone agent",
         "forge": "Agent building toolkit",
