chore: Add `.archive/` to `.gitignore` and remove an empty line.

--- a/.gitignore
+++ b/.gitignore
@@ -162,7 +162,6 @@ classic/benchmark/agbenchmark/reports/
 # Nodejs
 package-lock.json
 
-
 # Allow for locally private items
 # private
 pri*
@@ -178,3 +177,5 @@ autogpt_platform/backend/settings.py
 .test-contents
 .claude/settings.local.json
 /autogpt_platform/backend/logs
+
+.archive/
