--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,18 @@ autogpt_platform/backend/settings.py
 /autogpt_platform/backend/logs
 
 .archive/
+
+# Drift: ignore caches and temporary data
+.drift/lake/
+.drift/cache/
+.drift/history/
+.drift/call-graph/
+.drift/patterns/discovered/
+.drift/patterns/ignored/
+.drift/patterns/variants/
+.drift/constraints/discovered/
+.drift/constraints/ignored/
+.drift/contracts/discovered/
+.drift/contracts/ignored/
+.drift/contracts/mismatch/
+.drift/**/.backups/
