chore: Ignore the `docs/plans/` directory in `.gitignore`.

--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,7 @@ autogpt_platform/backend/settings.py
 /autogpt_platform/backend/logs
 
 .archive/
+docs/plans/
 
 # Drift: ignore caches and temporary data
 .drift/lake/
