--- a/autogpt_platform/.gitignore
+++ b/autogpt_platform/.gitignore
@@ -1,2 +1,20 @@
 *.ignore.*
 *.ign.*
+.ruff_cache/
+
+# Drift: ignore caches and temporary data
+.drift/lake/
+.drift/cache/
+.drift/history/
+.drift/call-graph/
+.drift/patterns/discovered/
+.drift/patterns/ignored/
+.drift/patterns/variants/
+.drift/constraints/discovered/
+.drift/constraints/ignored/
+.drift/contracts/discovered/
+.drift/contracts/ignored/
+.drift/contracts/mismatch/
+.drift/**/.backups/
+
+!.drift/config.json
