--- a/autogpt_platform/frontend/.gitignore
+++ b/autogpt_platform/frontend/.gitignore
@@ -58,3 +58,20 @@ storybook-static
 
 # Generated API files
 src/app/api/__generated__/
+
+# Drift: ignore caches and temporary data
+.drift/lake/
+.drift/cache/
+.drift/history/
+.drift/call-graph/
+.drift/patterns/discovered/
+.drift/patterns/ignored/
+.drift/patterns/variants/
+.drift/constraints/discovered/
+.drift/constraints/ignored/
+.drift/contracts/discovered/
+.drift/contracts/ignored/
+.drift/contracts/mismatch/
+.drift/**/.backups/
+
+!.drift/config.json
