feat: Configure project development environment using `mise` with component-specific settings and `poetry` integration, updating `.gitignore`.

--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,8 @@ docs/plans/
 .drift/contracts/ignored/
 .drift/contracts/mismatch/
 .drift/**/.backups/
+
+# Mise
+mise.local.toml
+mise.*.local.toml
+.mise/
