--- a/autogpt_platform/frontend/mise.toml
+++ b/autogpt_platform/frontend/mise.toml
@@ -2,10 +2,9 @@
 
 [env]
 # Load frontend environment
-_.file = [
-    ".env.default",
-    ".env"
-]
+# Note: .env.default has unquoted values that mise's parser doesn't support
+# Environment loading handled by Next.js instead
+# _.file = [".env.default", ".env"]
 
 [tools]
 # Node.js version must match package.json engines
