--- a/.github/workflows/platform-autogpt-deploy-dev.yaml
+++ b/.github/workflows/platform-autogpt-deploy-dev.yaml
@@ -17,42 +17,35 @@ permissions:
   contents: "read"
   id-token: "write"
 
+concurrency:
+  group: deploy-dev-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   migrate:
     environment: develop
     name: Run migrations for AutoGPT Platform
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Run Prisma migrations
+        uses: ./.github/actions/prisma-migrate
         with:
-          ref: ${{ github.event.inputs.git_ref || github.ref_name }}
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install prisma
-
-      - name: Run Backend Migrations
-        working-directory: ./autogpt_platform/backend
-        run: |
-          python -m prisma migrate deploy
-        env:
-          DATABASE_URL: ${{ secrets.BACKEND_DATABASE_URL }}
-          DIRECT_URL: ${{ secrets.BACKEND_DATABASE_URL }}
+          python-version: "3.13"
+          database-url: ${{ secrets.BACKEND_DATABASE_URL }}
+          git-ref: ${{ github.event.inputs.git_ref || github.ref_name }}
 
   trigger:
     needs: migrate
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Trigger deploy workflow
-        uses: peter-evans/repository-dispatch@v3
+        uses: peter-evans/repository-dispatch@v4
         with:
           token: ${{ secrets.DEPLOY_TOKEN }}
           repository: Significant-Gravitas/AutoGPT_cloud_infrastructure
