chore: updte gitignore to exclude .mcp.json

--- a/.gitignore
+++ b/.gitignore
@@ -177,6 +177,7 @@ autogpt_platform/backend/settings.py
 
 .archive/
 docs/plans/
+.mcp.json
 
 # Drift: ignore caches and temporary data
 .drift/lake/
