--- a/autogpt_platform/backend/docker-compose.test.yaml
+++ b/autogpt_platform/backend/docker-compose.test.yaml
@@ -1,30 +1,26 @@
 networks:
   app-network:
     name: app-network
+    driver: bridge
   shared-network:
     name: shared-network
+    driver: bridge
 
 volumes:
   supabase-config:
-
-x-agpt-services:
-  &agpt-services
-  networks:
-    - app-network
-    - shared-network
-
-x-supabase-services:
-  &supabase-services
-  networks:
-    - app-network
-    - shared-network
-
-
-volumes:
   clamav-data:
 
+x-agpt-services: &agpt-services
+  networks:
+    - app-network
+    - shared-network
+
+x-supabase-services: &supabase-services
+  networks:
+    - app-network
+    - shared-network
+
 services:
-   
   db:
     <<: *supabase-services
     extends:
@@ -85,6 +81,3 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-networks:
-     app-network-test:
-       driver: bridge
