--- a/autogpt_platform/backend/pyproject.toml
+++ b/autogpt_platform/backend/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.6.22"
 description = "A platform for building AI-powered agentic workflows"
 authors = ["AutoGPT <info@agpt.co>"]
 readme = "README.md"
-packages = [{ include = "backend", format = "sdist" }]
+packages = [{ include = "backend" }]
 
 
 [tool.poetry.dependencies]
