docs: Relocate research documentation, add audit log migration guide, and refactor VSCode settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,8 +77,8 @@
   // ============================================================================
   // Python Environment Configuration
   // ============================================================================
-  // Default Python interpreter (mise-managed Python)
-  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+  // Python interpreter paths are configured per-folder in AutoGPT.code-workspace
+  // to ensure correct .venv resolution for each workspace folder
   // Enable linting
   "python.linting.enabled": true,
   "python.linting.pylintEnabled": false,
