feat: add `.scratchpad/` to gitignore and standardize docker-compose command/healthcheck syntax and quotes.

--- a/.gitignore
+++ b/.gitignore
@@ -178,6 +178,7 @@ autogpt_platform/backend/settings.py
 .archive/
 docs/plans/
 .mcp.json
+.scratchpad/
 
 # Drift: ignore caches and temporary data
 .drift/lake/
