chore: Add `.scratchpad/**` to markdownlint ignore list.

--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -32,6 +32,7 @@ ignores:
   - ".terraform/**"
   # Local docs
   - ".docs/**"
+  - ".scratchpad/**"
   # LICENSE symlink (plain text, not markdown)
   - "docs/LICENSE.md"
   - "LICENSE"
