--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Setup mise
         uses: jdx/mise-action@v3
         with:
-          version: 2026.1.9  # Latest as of January 2026
+          version: 2026.1.9 # Latest as of January 2026
           install: true
           cache: true
           working_directory: autogpt_platform
@@ -114,7 +114,7 @@ jobs:
             "rabbitmq:management"
             "clamav/clamav-debian:latest"
             "busybox:latest"
-            "kong:3.10-alpine"
+            "kong:2.8.1"
             "supabase/gotrue:v2.170.0"
             "supabase/postgres:15.8.1.049"
             "supabase/postgres-meta:v0.86.1"
