--- a/autogpt_platform/db/docker/docker-compose.yml
+++ b/autogpt_platform/db/docker/docker-compose.yml
@@ -64,7 +64,7 @@ services:
 
   kong:
     container_name: supabase-kong
-    image: kong:3.10-alpine
+    image: kong:2.8.1
     restart: unless-stopped
     ports:
       - 8000:8000/tcp
